upload more file

--- a/index.html
+++ b/index.html
@@ -3,20 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first website</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>My First Assignment </title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-        <div class="half-width">
+<!-- This is Top Header Part-->
+    <section class="top-banner">
+        <div class="half-side top-margin">
             <h1>Hello I'm</h1>
-            <h1><span class="name-color">Sabiha yasmin</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, necessitatibus.</p>
-            <a  href="#">Clik me</a>
-        </div class="half-width">
-            <img src="images/peter.png" alt="">
+            <h1><span class="name-color" >Sabiha Yasmin</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dolorem optio quidem culpa dolor. Ratione corrupti provident doloribus laboriosam eos magni eligendi veritatis quo voluptates. Fugit sequi praesentium aut deleniti.</p>
+            <a class="link-button" href="##">HIRE ME</a>
+        </div>
+        <div class="half-side">
+            <img src="images/peter.png" alt="This is Morshedul Munna Photo">
         </div>
     </section>
+
+<!-- This is Middle Part-->
+<section class="biography-banner">
+    <div class="half-side">
+        <img src="images/peter_dream.png" alt="This is Morshedul Munna Photo">
+    </div>
+    
+    <div class="half-side top-margin">
+        <h1>Biography</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dolorem optio quidem culpa dolor. Ratione corrupti provident doloribus laboriosam eos magni eligendi veritatis quo voluptates. Fugit sequi praesentium aut deleniti.</p>
+        <a class="link-button" href="##">DOWENLOAD RESUME</a>
+    </div>
+    
+</section>
+<!-- This is Latest Work Part-->
+    <section class="work-photo">
+        <div class="latest-work"><h1>My Latest Work</h1></div>
+        <div><img src="images/work-1.png" alt=""></div>
+        <div><img src="images/work-2.jpg" alt=""></div>
+        <div><img src="images/work-3.jpg" alt=""></div>
+    </section>
+<!-- This is lower Part-->
+    <section class="lower-part">
+        <div>
+            <h1 class="h1-font">What Client aare say</h1>
+            <br>
+            <h3>Bruec Moccy</h3>
+            <p id="text-f">Founder & CEO Alies</p>
+            <p id="pra-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Molestiae quae nisi inventore sequi, enim eaque!</p>
+        </div>
+        <div class="email-bottom-part">
+            <p id="mess-color">Leave me a message in the</p>
+            <h1>email@gmail.com</h1>
+        </div>
+    </section>
+
+    <footer><p>@ Sabiha yasmin 2020, all rights reserved</p>
+    </footer>
+
 </body>
 </html>
