--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <a class="link-button" href="##">HIRE ME</a>
         </div>
         <div class="half-side">
-            <img src="images/peter.png" alt="This is Morshedul Munna Photo">
+            <img src="images/peter.png" alt="#">
         </div>
     </section>
 
 <!-- This is Middle Part-->
 <section class="biography-banner">
     <div class="half-side">
-        <img src="images/peter_dream.png" alt="This is Morshedul Munna Photo">
+        <img src="images/peter_dream.png" alt="#">
     </div>
     
     <div class="half-side top-margin">
